--- a/packages/calculators/package.json
+++ b/packages/calculators/package.json
@@ -5,18 +5,23 @@
   "scripts": {
     "build": "tsc",
     "build:tsup": "tsup --tsconfig tsconfig.json --format esm,cjs --dts --outDir dist",
-    "check:types": "tsc --noEmit"
+    "check:types": "tsc --noEmit --resolveJsonModule"
   },
   "author": "Agricultural Innovation Australia",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/node": "^24.3.1",
     "tsup": "^8.5.0",
     "typescript": "^5.9.2"
   },
   "dependencies": {
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
-    "semver": "^7.7.2"
+    "class-validator-jsonschema": "^5.1.0",
+    "openapi3-ts": "^3.1.0",
+    "semver": "^7.7.2",
+    "ts-deepmerge": "^7.0.3",
+    "type-fest": "^4.41.0"
   }
 }
