Enable strict mode

--- a/packages/calculators/tsconfig.json
+++ b/packages/calculators/tsconfig.json
@@ -11,6 +11,7 @@
     "types": [
       "node"
     ],
+    "strict": true,
     "resolveJsonModule": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
