Introduce jest for running existing tests

--- a/packages/calculators/tsconfig.json
+++ b/packages/calculators/tsconfig.json
@@ -9,7 +9,8 @@
       "DOM"
     ],
     "types": [
-      "node"
+      "node",
+      "jest"
     ],
     "strict": true,
     "resolveJsonModule": true,
