--- a/packages/calculators/package.json
+++ b/packages/calculators/package.json
@@ -5,13 +5,18 @@
   "scripts": {
     "build": "tsc",
     "build:tsup": "tsup --tsconfig tsconfig.json --format esm,cjs --dts --outDir dist",
-    "check:types": "tsc --noEmit --resolveJsonModule"
+    "check:types": "tsc --noEmit --resolveJsonModule",
+    "test": "jest"
   },
   "author": "Agricultural Innovation Australia",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.3.1",
+    "jest": "^30.1.3",
+    "nanoclone": "^1.0.2",
+    "ts-jest": "^29.4.1",
     "tsup": "^8.5.0",
     "typescript": "^5.9.2"
   },
