--- a/packages/calculators/package.json
+++ b/packages/calculators/package.json
@@ -5,12 +5,16 @@
   "scripts": {
     "build": "tsc",
     "build:tsup": "tsup --tsconfig tsconfig.json --format esm,cjs --dts --outDir dist",
-    "check:types": "tsc --noEmit --resolveJsonModule",
+    "check:types": "tsc --noEmit",
+    "lint": "pnpm run check:types",
     "test": "jest"
   },
   "author": "Agricultural Innovation Australia",
   "license": "ISC",
   "description": "",
+  "engines": {
+    "node": ">=22.19.0"
+  },
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.1",
