--- a/packages/calculators/package.json
+++ b/packages/calculators/package.json
@@ -18,16 +18,23 @@
   },
   "typesVersions": {
     "*": {
-      "types/*": ["dist/types/*"],
-      "versions/*": ["dist/versions/*"]
+      "types/*": [
+        "dist/types/*"
+      ],
+      "versions/*": [
+        "dist/versions/*"
+      ]
     }
   },
   "files": [
     "dist/**/*"
   ],
   "scripts": {
-    "build": "tsc",
-    "build:tsup": "tsup --tsconfig tsconfig.json --format esm,cjs --dts --outDir dist",
+    "build": "npm run build:types && npm run build:js",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build:js": "tsup",
+    "build:tsc": "tsc",
+    "build:tsup": "tsup",
     "check:types": "tsc --noEmit",
     "lint": "pnpm run check:types",
     "test": "jest",
@@ -40,6 +47,7 @@
     "node": ">=22.19.0"
   },
   "devDependencies": {
+    "@swc/core": "^1.13.5",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.1",
     "jest": "^30.1.3",
