--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@aginnovationaustralia/emissions-calculators",
+  "name": "@aginnovationaustralia/emissions-calculators-tools",
   "version": "0.1.0",
   "main": "index.js",
   "scripts": {
@@ -7,8 +7,8 @@
     "build": "turbo build",
     "lint": "turbo lint",
     "clean": "turbo clean",
-    "publish:dry": "pnpm build && pnpm -r publish --no-git-checks --access private --dry-run",
-		"publish:packages": "pnpm build && pnpm -r publish --no-git-checks --access private --force",
+    "publish:dry": "pnpm build && pnpm -r publish --filter=@aginnovationaustralia/emissions-calculators --no-git-checks --access private --dry-run",
+		"publish:packages": "pnpm build && pnpm -r publish --filter=@aginnovationaustralia/emissions-calculators --no-git-checks --access private --force",
 		"version:bump": "pnpm -r version"
   },
   "repository": {
