--- a/examples/ts-client/package.json
+++ b/examples/ts-client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
+    "dev": "CALCULATOR_METRICS_ORGANISATION='ts-client example' ts-node src/index.ts",
     "clean": "rm -rf dist"
   },
   "dependencies": {
