Adding new deps for the docs build

--- a/packages/calculators/tsconfig.json
+++ b/packages/calculators/tsconfig.json
@@ -3,7 +3,7 @@
   "exclude": ["dist", "build", "node_modules", "src/_raw"],
   
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2017",
     "lib": [
       "es2019",
       "DOM"
@@ -13,6 +13,8 @@
       "jest"
     ],
     "strict": true,
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
