--- a/packages/calculators/package.json
+++ b/packages/calculators/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@aginnovationaustralia/emissions-calculators",
   "version": "0.1.3",
+  "type": "module",
   "main": "dist/latest.js",
   "types": "dist/latest.d.ts",
   "exports": {
@@ -44,15 +45,19 @@
     "dist/**/*"
   ],
   "scripts": {
-    "build": "npm run build:types && npm run build:js",
+    "build": "vite build",
     "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "tsup",
+    "build:js": "vite build",
+    "build:vite": "vite build",
     "build:tsc": "tsc",
-    "build:tsup": "tsup",
+    "dev": "vite build --watch",
+    "preview": "vite preview",
+    "clean": "rm -rf dist",
     "check:types": "tsc --noEmit",
     "lint": "pnpm run check:types",
     "test": "jest",
-    "version": "npm version --no-git-tag-version"
+    "version": "npm version --no-git-tag-version",
+    "build:docs": "tsx scripts/build-docs.ts"
   },
   "author": "Agricultural Innovation Australia",
   "license": "ISC",
@@ -61,13 +66,17 @@
     "node": ">=22.19.0"
   },
   "devDependencies": {
+    "@types/espree": "^10.1.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.1",
+    "@typescript-eslint/parser": "^8.44.0",
     "jest": "^30.1.3",
     "nanoclone": "^1.0.2",
     "ts-jest": "^29.4.1",
-    "tsup": "^8.5.0",
-    "typescript": "^5.9.2"
+    "tsx": "^4.20.5",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.5",
+    "vite-plugin-dts": "^4.5.4"
   },
   "dependencies": {
     "class-transformer": "^0.5.1",
