--- a/packages/calculators/package.json
+++ b/packages/calculators/package.json
@@ -1,14 +1,15 @@
 {
   "name": "@aginnovationaustralia/emissions-calculators",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "type": "module",
-  "main": "dist/latest.js",
-  "types": "dist/latest.d.ts",
+  "main": "dist/versions/3.0.0/calculators.cjs",
+  "module": "dist/versions/3.0.0/calculators.mjs",
+  "types": "dist/versions/3.0.0/calculators.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/latest.d.ts",
-      "import": "./dist/latest.js",
-      "require": "./dist/latest.js"
+      "types": "./dist/versions/3.0.0/calculators.d.ts",
+      "import": "./dist/versions/3.0.0/calculators.mjs",
+      "require": "./dist/versions/3.0.0/calculators.cjs"
     },
     "./versions/*": {
       "types": "./dist/versions/*",
@@ -23,12 +24,12 @@
     "./calculators": {
       "types": "./dist/versions/3.0.0/calculators.d.ts",
       "import": "./dist/versions/3.0.0/calculators.mjs",
-      "require": "./dist/versions/3.0.0/calculators.js"
+      "require": "./dist/versions/3.0.0/calculators.cjs"
     },
     "./versions/3.0.0/calculators": {
       "types": "./dist/versions/3.0.0/calculators.d.ts",
       "import": "./dist/versions/3.0.0/calculators.mjs",
-      "require": "./dist/versions/3.0.0/calculators.js"
+      "require": "./dist/versions/3.0.0/calculators.cjs"
     }
   },
   "typesVersions": {
