--- a/packages/calculators/package.json
+++ b/packages/calculators/package.json
@@ -47,10 +47,6 @@
   ],
   "scripts": {
     "build": "vite build",
-    "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "vite build",
-    "build:vite": "vite build",
-    "build:tsc": "tsc",
     "dev": "vite build --watch",
     "preview": "vite preview",
     "clean": "rm -rf dist",
@@ -58,7 +54,7 @@
     "lint": "pnpm run check:types",
     "test": "jest",
     "version": "npm version --no-git-tag-version",
-    "build:docs": "tsx scripts/build-docs.ts"
+    "build:docs": "tsx scripts/build-docs/index.ts"
   },
   "author": "Agricultural Innovation Australia",
   "license": "ISC",
@@ -67,7 +63,6 @@
     "node": ">=22.19.0"
   },
   "devDependencies": {
-    "@types/espree": "^10.1.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.1",
     "@typescript-eslint/parser": "^8.44.0",
