--- a/packages/calculators/package.json
+++ b/packages/calculators/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@aginnovationaustralia/emissions-calculators",
   "version": "0.1.4",
-  "type": "module",
   "main": "dist/versions/3.0.0/index.cjs",
   "module": "dist/versions/3.0.0/index.mjs",
   "types": "dist/versions/3.0.0/index.d.ts",
@@ -16,27 +15,31 @@
       "import": "./dist/versions/3.0.0/index.mjs",
       "require": "./dist/versions/3.0.0/index.cjs"
     },
+    "./versions/3.0.0/types": {
+      "types": "./dist/versions/3.0.0/types/index.d.ts",
+      "import": "./dist/versions/3.0.0/types/index.mjs",
+      "require": "./dist/versions/3.0.0/types/index.cjs"
+    },
     "./versions/3.0.0/*": {
-      "types": "./dist/versions/3.0.0/*",
-      "import": "./dist/versions/3.0.0/*",
-      "require": "./dist/versions/3.0.0/*"
+      "types": "./dist/versions/3.0.0/*.d.ts",
+      "import": "./dist/versions/3.0.0/*.mjs",
+      "require": "./dist/versions/3.0.0/*.cjs"
+    },
+    "./versions/3.0.0/*/*": {
+      "types": "./dist/versions/3.0.0/*/*.d.ts",
+      "import": "./dist/versions/3.0.0/*/*.mjs",
+      "require": "./dist/versions/3.0.0/*/*.cjs"
     },
     "./versions/*": {
-      "types": "./dist/versions/*",
-      "import": "./dist/versions/*",
-      "require": "./dist/versions/*"
+      "types": "./dist/versions/*.d.ts",
+      "import": "./dist/versions/*.mjs",
+      "require": "./dist/versions/*.cjs"
     },
     "./*": {
-      "types": "./dist/versions/3.0.0/*",
-      "import": "./dist/versions/3.0.0/*",
-      "require": "./dist/versions/3.0.0/*"
-    },
-    "./calculators": {
-      "types": "./dist/versions/3.0.0/calculators.d.ts",
-      "import": "./dist/versions/3.0.0/calculators.mjs",
-      "require": "./dist/versions/3.0.0/calculators.cjs"
+      "types": "./dist/versions/3.0.0/*.d.ts",
+      "import": "./dist/versions/3.0.0/*.mjs",
+      "require": "./dist/versions/3.0.0/*.cjs"
     }
-    
   },
   "typesVersions": {
     "*": {
@@ -52,9 +55,9 @@
     "dist/**/*"
   ],
   "scripts": {
-    "build": "vite build",
-    "dev": "vite build --watch",
-    "preview": "vite preview",
+    "build": "npm run generate-types && rollup -c",
+    "generate-types": "node -e \"import('./scripts/generate-type-exports.js').then(m => m.generateTypeExports())\"",
+    "dev": "rollup -c --watch",
     "clean": "rm -rf dist",
     "check:types": "tsc --noEmit",
     "lint": "pnpm run check:types",
@@ -69,24 +72,32 @@
     "node": ">=22.19.0"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^5.1.1",
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-typescript": "^12.1.4",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.1",
     "@typescript-eslint/parser": "^8.44.0",
+    "glob": "^11.0.3",
     "jest": "^30.1.3",
     "nanoclone": "^1.0.2",
+    "rollup": "^4.51.0",
+    "rollup-plugin-copy": "^3.5.0",
     "ts-jest": "^29.4.1",
     "tsx": "^4.20.5",
-    "typescript": "^5.9.2",
-    "vite": "^7.1.5",
-    "vite-plugin-dts": "^4.5.4"
+    "typescript": "^5.9.2"
   },
   "dependencies": {
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "class-validator-jsonschema": "^5.1.0",
     "mixpanel": "^0.18.1",
+    "reflect-metadata": "^0.2.2",
     "semver": "^7.7.2",
     "ts-deepmerge": "^7.0.3",
+    "tslib": "^2.8.1",
     "type-fest": "^4.41.0"
   }
 }
