--- a/examples/ts-client/package.json
+++ b/examples/ts-client/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
+    "check:types": "tsc --noEmit",
+    "lint": "eslint . && pnpm run check:types",
     "dev": "CALCULATOR_METRICS_ORGANISATION='ts-client example' ts-node src/index.ts",
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@aginnovationaustralia/emissions-calculators": "file:../../packages/calculators"
+    "@aginnovationaustralia/emissions-calculators": "0.1.6"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
