--- a/packages/calculators/package.json
+++ b/packages/calculators/package.json
@@ -53,6 +53,7 @@
     "semver": "^7.7.2",
     "ts-deepmerge": "^7.0.3",
     "tslib": "^2.8.1",
-    "type-fest": "^4.41.0"
+    "type-fest": "^4.41.0",
+    "zod": "^4.1.12"
   }
 }
