--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,5 +40,6 @@ jobs:
         shell: bash
 
       - name: Publish
-        run: pnpm publish:packages
+        run: npm publish
+        working-directory: packages/calculators
         shell: bash
