Adding a cSpell word

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "aginnovationaustralia",
+        "LIMESTONEFRACTION",
         "TSES"
     ],
     "editor.formatOnSave": true
