--- a/packages/calculators/package.json
+++ b/packages/calculators/package.json
@@ -51,6 +51,7 @@
     "ts-deepmerge": "^7.0.3",
     "tslib": "^2.8.1",
     "type-fest": "^4.41.0",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "zod-openapi": "^5.4.3"
   }
 }
