--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,9 +1,10 @@
 name: Pull Request CI
 
 on:
-  pull_request:
-    branches: [main]
-  workflow_dispatch:
+  push:
+    branches:
+      - '**'
+      - '!main'
 
 jobs:
   build-and-test:
