--- a/.github/workflows/auto-reply-issues.yml
+++ b/.github/workflows/auto-reply-issues.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   initial-reply:
     runs-on: ubuntu-latest
+    permissions:
+      issues: write
+      pull-requests: write
     steps:
       - uses: EddieHubCommunity/gh-action-community/src/welcome@main
         with:
