--- a/.github/actions/build-and-test/action.yml
+++ b/.github/actions/build-and-test/action.yml
@@ -14,6 +14,10 @@ runs:
         node-version-file: '.nvmrc'
         cache: 'pnpm'
 
+    - name: Configure git to use HTTPS instead of SSH
+      run: git config --global url."https://github.com/".insteadOf git@github.com:
+      shell: bash
+
     - name: Install dependencies
       run: pnpm install
       shell: bash
