--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,7 +28,8 @@ jobs:
           cache: 'pnpm'
 
       - name: Configure git to use HTTPS instead of SSH
-        run: git config --global url."https://github.com/".insteadOf git@github.com:
+        run: |
+          git config --global url."https://github.com/".insteadOf git@github.com:
         shell: bash
 
       - name: Install dependencies
