--- a/.github/actions/build-and-test/action.yml
+++ b/.github/actions/build-and-test/action.yml
@@ -15,7 +15,8 @@ runs:
         cache: 'pnpm'
 
     - name: Configure git to use HTTPS instead of SSH
-      run: git config --global url."https://github.com/".insteadOf git@github.com:
+      run: |
+        git config --global url."https://github.com/".insteadOf git@github.com:
       shell: bash
 
     - name: Install dependencies
