--- a/examples/ts-client/package.json
+++ b/examples/ts-client/package.json
@@ -23,5 +23,5 @@
     "node": ">=22.19.0"
   },
   "author": "Agricultural Innovation Australia",
-  "license": "CC-BY-ND-4.0"
+  "license": "CC-BY-4.0"
 }
